set up completed

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@ package-lock.json
 
 .env
 
-Online Bookstore Inventory Management System.docx
+files
 
-~$line Bookstore Inventory Management System.docx
+node_modules
